# sf6rs

./: Cargo.toml  README.md
character/: Cargo.toml
character/src/: lib.rs
framedata/: Cargo.toml
framedata/src/: lib.rs  loader.rs
src/: character.rs  framedata.rs  lib.rs  loader.rs
