[package]
name = "sf6rs"
version = "0.3.3"
edition = "2021"
authors = ["sagan"]
description = "A library for interfacing with various Street Figher 6 data forms."
readme = "README.md"
repository = "https://github.com/sagansfault/sf6rs"
license = "MIT OR Apache-2.0"
keywords = ["streetfighter", "sf6", "scraper", "framedata"]
categories = ["parsing", "games"]

[dependencies]
regex = "1.10.4"
scraper = "0.19.0"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = "0.12.4"
